# Haine

./: .gitattributes  .gitignore  .gitmessage  .gitmodules  CLAUDE.md  a.dic  build.bat  build.ps1  developer_options.txt  install.txt  license.txt  md5buildignore.txt  readme.md  readme.txt  situations.md  updates.txt  updates2.dau
ghost/master/: Cargo.toml  build.cmd  build.rs  clippy.toml  descript.txt  dic_advanced.txt  dic_base.txt  dic_network.txt  dic_resource.txt  draft.dic  makecmd  readme-original.txt  readme.txt  satori_savebackup.txt  satori_savedata.txt  ssp_shiori_log.txt  system_config.txt  yaya.txt  yaya_aitalk.dic  yaya_aitalk.txt  yaya_bootend.dic  yaya_bootend.txt  yaya_change.dic  yaya_change.txt  yaya_communicate.dic  yaya_communicate.txt  yaya_config.txt  yaya_debug.dic  yaya_debug.txt  yaya_draft.dic  yaya_dressup.dic  yaya_dressup.txt  yaya_emerg.dic  yaya_emerg.txt  yaya_emerg_dic.dic  yaya_emerg_dic.txt  yaya_etc.dic  yaya_etc.txt  yaya_events.dic  yaya_events.txt  (+25 more)
ghost/master/.cargo/: config.toml
ghost/master/examples/: compare_autobreakline.rs  test_autobreakline.rs
ghost/master/ipadic-mecab-2_7_0/: COPYING  NOTICE
ghost/master/profile/: ghost.dat.bak  var.txt
ghost/master/saori/kisaragi/: readme.txt
ghost/master/src/: autobreakline.rs  autolinefeed.rs  error.rs  events.rs  extract_surfaces.ps1  lib.rs  roulette.rs  sound.rs  status.rs  variables.rs
ghost/master/src/events/: aitalk.rs  autolinefeed.rs  bootend.rs  common.rs  input.rs  key.rs  menu.rs  (+9 more)
ghost/master/system/: _loading_order.txt  yaya_optional.dic  yaya_shiori3.dic
(+117 files in other folders)
