[package]
name = "haine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiorust = { git = "https://github.com/Narazaka/shiorust", version = "0.1.0" }
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17.1"
chrono = "0.4.24"
simplelog = "0.12.1"
log = "0.4.17"
encoding_rs = "0.8.32"
rand = "0.8.5"
regex = "1.9.5"
vibrato = "0.5.1"
zstd = "0.12.4"
md5 = "0.7.0"
shiori_hglobal = "0.3.0"
paste = "1.0.14"
fancy-regex = "0.13.0"
strum = "0.26.2"
strum_macros = "0.26.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winbase", "libloaderapi", "stringapiset"]}

[lib]
name = "haine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
